Remove warning filters

--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,9 @@
 % !TEX TS-program = lualatex
 % !TEX encoding = UTF-8 Unicode
 
-% Ignorierte Warnings
+% Ignored warnings
 \RequirePackage{silence}
-\WarningFilter{biblatex}{File }  % Bei Gelegenheit gegenprüfen!
-\WarningFilter{tocbasic}{`tocbibind' redefinition of `\listoffigures'}
-\WarningFilter{tocbasic}{`tocbibind' redefinition of `\listoftables'} 
-\WarningFilter{chktex}{You should perhaps use `\min' instead.} % unfortunately -
-\WarningFilter{chktex}{You should perhaps use `\max' instead.} % - doesn't work
-\WarningFilter{latex}{Marginpar on page} % due to todonotes
-\WarningFilter{LaTeX}{Command }
+\WarningFilter{<the respective package>}{<the ignored text>}
 
 \documentclass[11pt,oneside,numbers=noenddot,a4paper,titlepage,abstract]{scrartcl}
 % debugging
