fixing subtitles: remove titling; extract doc dims

--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,19 @@
 % \invdefref like defref but inverted
 % \begin{definition} for describing params/variables in a math equation 
 
+
+% Document Dimensions
+\spacing{1.25}
+\geometry{a4paper,left=20mm,right=20mm, top=20mm, bottom=20mm, headsep=7mm}
+\raggedbottom{}
+
+% Subsection numbering depth
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}
+
 % Metadaten %
 \title{\LaTeX{} Template}
+\subtitle{Optional Subtitle}
 \author[]{Malte Zietlow}
 \affil[]{
   Department of Computer Science \\
