Also include scientific packages

--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,11 @@
 \input{preamble/references-and-citation.tex}
 \addbibresource{BibLaTex/citation.bib}
 
-
 % Fonts
 \input{preamble/fonts-and-symbols.tex}
+
+% Scientific Packages
+\input{preamble/scientific.tex}
 
 % Formatting
 \input{preamble/formatting.tex}
