Hyperlink should contain complete ref in cref

--- a/preamble/references-and-citation.tex
+++ b/preamble/references-and-citation.tex
@@ -11,4 +11,4 @@
 \usepackage[inline,shortlabels]{enumitem}
 \usepackage[acronym]{glossaries}		% \gls{<golssary-entry>}
 \setacronymstyle{long-short}
-\usepackage{cleveref}
+\usepackage[nameinlink]{cleveref}
