Fix explanation for custom commands

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@
 % \parref for referencing paragraphs
 % \defref for referencing math-definitons
 % \invdefref like defref but inverted
-% \begin{definition} for describing params/variables in a math equation 
+% \begin{conditions} for describing params/variables in a math equation 
 
 
 % Document Dimensions
