--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@
 
 % Document Dimensions
 \spacing{1.25}
-\geometry{a4paper,left=20mm,right=20mm, top=20mm, bottom=20mm, headsep=7mm}
+\geometry{a4paper,margin=20mm, bottom=30mm, footskip=10mm}
 \raggedbottom{}
 
 % Subsection numbering depth
