--- a/main.tex
+++ b/main.tex
@@ -95,6 +95,8 @@
 %%%% Frontmatter %%%%
 \maketitle
 \input{Structure/01_Frontmatter/Abstract.tex}
+
+% TOC and lists of figures/tables/glossaries
 {\hypersetup{hidelinks}
   \tableofcontents
   \begingroup
